filter cropping issue fixed

--- a/src/css/utilities/utilities.scss
+++ b/src/css/utilities/utilities.scss
@@ -8,7 +8,7 @@
 .u-overflow--auto { overflow: auto; }
 .u-cursor--pointer { cursor: pointer; }
 .u-cursor--default { cursor: default; }
-.u-minHeight--full { min-height: 100%; }
+.u-minHeight--full { min-height: 80vh; }
 .u-minWidth--full { min-width: 100%; }
 .u-height--full { height: 100%; }
 .u-width--full { width: 100%; }
